src/moe.output
Terminais sem uso na gramática

    TK_BOOL


Gramática

    0 $accept: program $end

    1 $@1: ε

    2 program: TK_PROGRAM TK_IDENTIFIER $@1 TK_LBRACE body TK_RBRACE

    3 body: declarations

    4 declarations: ε
    5             | declarations declaration

    6 declaration: var_declaration
    7            | statement

    8 $@2: ε

    9 var_declaration: access_modifier data_type TK_IDENTIFIER $@2 var_init

   10 var_init: TK_SEMICOLON
   11         | TK_EQUAL expression_statement

   12 data_type: TK_STRING
   13          | TK_INT
   14          | TK_POSITION
   15          | TK_PARAMETER

   16 access_modifier: TK_GLOBAL
   17                | ε

   18 statement: expression_statement
   19          | print_statement
   20          | if_statement
   21          | loop_statement
   22          | open_statement
   23          | jaw_statement
   24          | close_statement
   25          | delay_statement
   26          | move_statement
   27          | moved_statement

   28 expression_statement: expression TK_SEMICOLON

   29 $@3: ε

   30 print_statement: TK_PRINT TK_LPAREN TK_STRING_LITERAL $@3 TK_RPAREN TK_SEMICOLON

   31 if_statement: TK_IF TK_LPAREN if_condition TK_RPAREN TK_LBRACE declarations TK_RBRACE else_statement

   32 else_statement: ε
   33               | TK_ELSE if_statement
   34               | TK_ELSE TK_LBRACE declarations TK_RBRACE

   35 if_condition: if_condition if_valid_operator term
   36             | if_condition TK_OR if_condition
   37             | if_condition TK_AND if_condition
   38             | term

   39 if_valid_operator: comparison_operator
   40                  | TK_EQUAL_EQUAL
   41                  | TK_BANG_EQUAL

   42 $@4: ε

   43 loop_statement: TK_FOR TK_LPAREN TK_IDENTIFIER $@4 TK_BETWEEN numeric_variable TK_COMMA numeric_variable TK_RPAREN TK_LBRACE declarations TK_RBRACE

   44 open_statement: TK_OPEN TK_LPAREN optional_argument TK_RPAREN TK_SEMICOLON

   45 close_statement: TK_CLOSE TK_LPAREN optional_argument TK_RPAREN TK_SEMICOLON

   46 optional_argument: ε
   47                  | term

   48 jaw_statement: TK_JAW TK_LPAREN two_numbers TK_RPAREN TK_SEMICOLON

   49 move_statement: TK_MOVE TK_LPAREN two_numbers TK_RPAREN TK_SEMICOLON

   50 moved_statement: TK_AWAIT TK_MOVE TK_LPAREN two_numbers TK_RPAREN TK_SEMICOLON

   51 two_numbers: numeric_variable
   52            | numeric_variable TK_COMMA numeric_variable

   53 delay_statement: TK_DELAY TK_LPAREN term TK_RPAREN TK_SEMICOLON

   54 expression: assignment

   55 $@5: ε

   56 assignment: TK_IDENTIFIER $@5 TK_EQUAL assignment
   57           | logic

   58 logic: logic TK_OR equality
   59      | logic TK_AND equality
   60      | equality

   61 equality: equality TK_EQUAL_EQUAL comparison
   62         | equality TK_BANG_EQUAL comparison
   63         | comparison

   64 comparison: comparison comparison_operator term
   65           | term

   66 term: term TK_PLUS factor
   67     | term TK_MINUS factor
   68     | factor

   69 factor: factor TK_STAR unary
   70       | factor TK_SLASH unary
   71       | unary

   72 unary: TK_MINUS unary
   73      | primary

   74 primary: TK_TRUE
   75        | TK_FALSE
   76        | TK_NUMBER
   77        | TK_STRING_LITERAL
   78        | TK_IDENTIFIER
   79        | TK_LPAREN logic TK_RPAREN

   80 numeric_variable: TK_NUMBER
   81                 | TK_IDENTIFIER

   82 comparison_operator: TK_GREATER
   83                    | TK_LESSER
   84                    | TK_GREATER_EQUAL
   85                    | TK_LESSER_EQUAL


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    TK_PROGRAM <nd_obj> (258) 2
    TK_OPEN <nd_obj> (259) 44
    TK_JAW <nd_obj> (260) 48
    TK_CLOSE <nd_obj> (261) 45
    TK_DELAY <nd_obj> (262) 53
    TK_GLOBAL <nd_obj> (263) 16
    TK_MOVE <nd_obj> (264) 49 50
    TK_AWAIT <nd_obj> (265) 50
    TK_STRING_LITERAL <nd_obj> (266) 30 77
    TK_NUMBER <nd_obj> (267) 76 80
    TK_IDENTIFIER <nd_obj> (268) 2 9 43 56 78 81
    TK_TRUE <nd_obj> (269) 74
    TK_FALSE <nd_obj> (270) 75
    TK_STRING <nd_obj> (271) 12
    TK_INT <nd_obj> (272) 13
    TK_POSITION <nd_obj> (273) 14
    TK_PARAMETER <nd_obj> (274) 15
    TK_BOOL <nd_obj> (275)
    TK_PRINT <nd_obj> (276) 30
    TK_IF <nd_obj> (277) 31
    TK_ELSE <nd_obj> (278) 33 34
    TK_FOR <nd_obj> (279) 43
    TK_BETWEEN <nd_obj> (280) 43
    TK_AND <nd_obj> (281) 37 59
    TK_OR <nd_obj> (282) 36 58
    TK_EQUAL <nd_obj> (283) 11 56
    TK_BANG_EQUAL <nd_obj> (284) 41 62
    TK_EQUAL_EQUAL <nd_obj> (285) 40 61
    TK_LESSER_EQUAL <nd_obj> (286) 85
    TK_GREATER_EQUAL <nd_obj> (287) 84
    TK_LESSER <nd_obj> (288) 83
    TK_GREATER <nd_obj> (289) 82
    TK_PLUS <nd_obj> (290) 66
    TK_MINUS <nd_obj> (291) 67 72
    TK_STAR <nd_obj> (292) 69
    TK_SLASH <nd_obj> (293) 70
    TK_LPAREN <nd_obj> (294) 30 31 43 44 45 48 49 50 53 79
    TK_RPAREN <nd_obj> (295) 30 31 43 44 45 48 49 50 53 79
    TK_LBRACE <nd_obj> (296) 2 31 34 43
    TK_RBRACE <nd_obj> (297) 2 31 34 43
    TK_SEMICOLON <nd_obj> (298) 10 28 30 44 45 48 49 50 53
    TK_COMMA <nd_obj> (299) 43 52


Não terminais com as regras onde eles aparecem

    $accept (45)
        à esquerda: 0
    program <nd_obj> (46)
        à esquerda: 2
        à direita: 0
    $@1 (47)
        à esquerda: 1
        à direita: 2
    body <nd_obj> (48)
        à esquerda: 3
        à direita: 2
    declarations <nd_obj> (49)
        à esquerda: 4 5
        à direita: 3 5 31 34 43
    declaration <nd_obj> (50)
        à esquerda: 6 7
        à direita: 5
    var_declaration <nd_obj> (51)
        à esquerda: 9
        à direita: 6
    $@2 (52)
        à esquerda: 8
        à direita: 9
    var_init <nd_obj> (53)
        à esquerda: 10 11
        à direita: 9
    data_type (54)
        à esquerda: 12 13 14 15
        à direita: 9
    access_modifier <nd_obj> (55)
        à esquerda: 16 17
        à direita: 9
    statement <nd_obj> (56)
        à esquerda: 18 19 20 21 22 23 24 25 26 27
        à direita: 7
    expression_statement <nd_obj> (57)
        à esquerda: 28
        à direita: 11 18
    print_statement <nd_obj> (58)
        à esquerda: 30
        à direita: 19
    $@3 (59)
        à esquerda: 29
        à direita: 30
    if_statement <nd_obj> (60)
        à esquerda: 31
        à direita: 20 33
    else_statement <nd_obj> (61)
        à esquerda: 32 33 34
        à direita: 31
    if_condition <nd_obj> (62)
        à esquerda: 35 36 37 38
        à direita: 31 35 36 37
    if_valid_operator <nd_obj> (63)
        à esquerda: 39 40 41
        à direita: 35
    loop_statement <nd_obj> (64)
        à esquerda: 43
        à direita: 21
    $@4 (65)
        à esquerda: 42
        à direita: 43
    open_statement <nd_obj> (66)
        à esquerda: 44
        à direita: 22
    close_statement <nd_obj> (67)
        à esquerda: 45
        à direita: 24
    optional_argument <nd_obj> (68)
        à esquerda: 46 47
        à direita: 44 45
    jaw_statement <nd_obj> (69)
        à esquerda: 48
        à direita: 23
    move_statement <nd_obj> (70)
        à esquerda: 49
        à direita: 26
    moved_statement <nd_obj> (71)
        à esquerda: 50
        à direita: 27
    two_numbers <nd_obj> (72)
        à esquerda: 51 52
        à direita: 48 49 50
    delay_statement <nd_obj> (73)
        à esquerda: 53
        à direita: 25
    expression <nd_obj> (74)
        à esquerda: 54
        à direita: 28
    assignment <nd_obj> (75)
        à esquerda: 56 57
        à direita: 54 56
    $@5 (76)
        à esquerda: 55
        à direita: 56
    logic <nd_obj> (77)
        à esquerda: 58 59 60
        à direita: 57 58 59 79
    equality <nd_obj> (78)
        à esquerda: 61 62 63
        à direita: 58 59 60 61 62
    comparison <nd_obj> (79)
        à esquerda: 64 65
        à direita: 61 62 63 64
    term <nd_obj> (80)
        à esquerda: 66 67 68
        à direita: 35 38 47 53 64 65 66 67
    factor <nd_obj> (81)
        à esquerda: 69 70 71
        à direita: 66 67 68 69 70
    unary <nd_obj> (82)
        à esquerda: 72 73
        à direita: 69 70 71 72
    primary <nd_obj> (83)
        à esquerda: 74 75 76 77 78 79
        à direita: 73
    numeric_variable <nd_obj> (84)
        à esquerda: 80 81
        à direita: 43 51 52
    comparison_operator <nd_obj> (85)
        à esquerda: 82 83 84 85
        à direita: 39 64


Estado 0

    0 $accept: • program $end

    TK_PROGRAM  deslocar, e ir ao estado 1

    program  ir ao estado 2


Estado 1

    2 program: TK_PROGRAM • TK_IDENTIFIER $@1 TK_LBRACE body TK_RBRACE

    TK_IDENTIFIER  deslocar, e ir ao estado 3


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 4


Estado 3

    2 program: TK_PROGRAM TK_IDENTIFIER • $@1 TK_LBRACE body TK_RBRACE

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 5


Estado 4

    0 $accept: program $end •

    $padrão  aceitar


Estado 5

    2 program: TK_PROGRAM TK_IDENTIFIER $@1 • TK_LBRACE body TK_RBRACE

    TK_LBRACE  deslocar, e ir ao estado 6


Estado 6

    2 program: TK_PROGRAM TK_IDENTIFIER $@1 TK_LBRACE • body TK_RBRACE

    $padrão  reduzir usando a regra 4 (declarations)

    body          ir ao estado 7
    declarations  ir ao estado 8


Estado 7

    2 program: TK_PROGRAM TK_IDENTIFIER $@1 TK_LBRACE body • TK_RBRACE

    TK_RBRACE  deslocar, e ir ao estado 9


Estado 8

    3 body: declarations •
    5 declarations: declarations • declaration

    TK_OPEN            deslocar, e ir ao estado 10
    TK_JAW             deslocar, e ir ao estado 11
    TK_CLOSE           deslocar, e ir ao estado 12
    TK_DELAY           deslocar, e ir ao estado 13
    TK_GLOBAL          deslocar, e ir ao estado 14
    TK_MOVE            deslocar, e ir ao estado 15
    TK_AWAIT           deslocar, e ir ao estado 16
    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 19
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_PRINT           deslocar, e ir ao estado 22
    TK_IF              deslocar, e ir ao estado 23
    TK_FOR             deslocar, e ir ao estado 24
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    TK_RBRACE  reduzir usando a regra 3 (body)
    $padrão    reduzir usando a regra 17 (access_modifier)

    declaration           ir ao estado 27
    var_declaration       ir ao estado 28
    access_modifier       ir ao estado 29
    statement             ir ao estado 30
    expression_statement  ir ao estado 31
    print_statement       ir ao estado 32
    if_statement          ir ao estado 33
    loop_statement        ir ao estado 34
    open_statement        ir ao estado 35
    close_statement       ir ao estado 36
    jaw_statement         ir ao estado 37
    move_statement        ir ao estado 38
    moved_statement       ir ao estado 39
    delay_statement       ir ao estado 40
    expression            ir ao estado 41
    assignment            ir ao estado 42
    logic                 ir ao estado 43
    equality              ir ao estado 44
    comparison            ir ao estado 45
    term                  ir ao estado 46
    factor                ir ao estado 47
    unary                 ir ao estado 48
    primary               ir ao estado 49


Estado 9

    2 program: TK_PROGRAM TK_IDENTIFIER $@1 TK_LBRACE body TK_RBRACE •

    $padrão  reduzir usando a regra 2 (program)


Estado 10

   44 open_statement: TK_OPEN • TK_LPAREN optional_argument TK_RPAREN TK_SEMICOLON

    TK_LPAREN  deslocar, e ir ao estado 50


Estado 11

   48 jaw_statement: TK_JAW • TK_LPAREN two_numbers TK_RPAREN TK_SEMICOLON

    TK_LPAREN  deslocar, e ir ao estado 51


Estado 12

   45 close_statement: TK_CLOSE • TK_LPAREN optional_argument TK_RPAREN TK_SEMICOLON

    TK_LPAREN  deslocar, e ir ao estado 52


Estado 13

   53 delay_statement: TK_DELAY • TK_LPAREN term TK_RPAREN TK_SEMICOLON

    TK_LPAREN  deslocar, e ir ao estado 53


Estado 14

   16 access_modifier: TK_GLOBAL •

    $padrão  reduzir usando a regra 16 (access_modifier)


Estado 15

   49 move_statement: TK_MOVE • TK_LPAREN two_numbers TK_RPAREN TK_SEMICOLON

    TK_LPAREN  deslocar, e ir ao estado 54


Estado 16

   50 moved_statement: TK_AWAIT • TK_MOVE TK_LPAREN two_numbers TK_RPAREN TK_SEMICOLON

    TK_MOVE  deslocar, e ir ao estado 55


Estado 17

   77 primary: TK_STRING_LITERAL •

    $padrão  reduzir usando a regra 77 (primary)


Estado 18

   76 primary: TK_NUMBER •

    $padrão  reduzir usando a regra 76 (primary)


Estado 19

   56 assignment: TK_IDENTIFIER • $@5 TK_EQUAL assignment
   78 primary: TK_IDENTIFIER •

    TK_EQUAL  reduzir usando a regra 55 ($@5)
    $padrão   reduzir usando a regra 78 (primary)

    $@5  ir ao estado 56


Estado 20

   74 primary: TK_TRUE •

    $padrão  reduzir usando a regra 74 (primary)


Estado 21

   75 primary: TK_FALSE •

    $padrão  reduzir usando a regra 75 (primary)


Estado 22

   30 print_statement: TK_PRINT • TK_LPAREN TK_STRING_LITERAL $@3 TK_RPAREN TK_SEMICOLON

    TK_LPAREN  deslocar, e ir ao estado 57


Estado 23

   31 if_statement: TK_IF • TK_LPAREN if_condition TK_RPAREN TK_LBRACE declarations TK_RBRACE else_statement

    TK_LPAREN  deslocar, e ir ao estado 58


Estado 24

   43 loop_statement: TK_FOR • TK_LPAREN TK_IDENTIFIER $@4 TK_BETWEEN numeric_variable TK_COMMA numeric_variable TK_RPAREN TK_LBRACE declarations TK_RBRACE

    TK_LPAREN  deslocar, e ir ao estado 59


Estado 25

   72 unary: TK_MINUS • unary

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    unary    ir ao estado 61
    primary  ir ao estado 49


Estado 26

   79 primary: TK_LPAREN • logic TK_RPAREN

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    logic       ir ao estado 62
    equality    ir ao estado 44
    comparison  ir ao estado 45
    term        ir ao estado 46
    factor      ir ao estado 47
    unary       ir ao estado 48
    primary     ir ao estado 49


Estado 27

    5 declarations: declarations declaration •

    $padrão  reduzir usando a regra 5 (declarations)


Estado 28

    6 declaration: var_declaration •

    $padrão  reduzir usando a regra 6 (declaration)


Estado 29

    9 var_declaration: access_modifier • data_type TK_IDENTIFIER $@2 var_init

    TK_STRING     deslocar, e ir ao estado 63
    TK_INT        deslocar, e ir ao estado 64
    TK_POSITION   deslocar, e ir ao estado 65
    TK_PARAMETER  deslocar, e ir ao estado 66

    data_type  ir ao estado 67


Estado 30

    7 declaration: statement •

    $padrão  reduzir usando a regra 7 (declaration)


Estado 31

   18 statement: expression_statement •

    $padrão  reduzir usando a regra 18 (statement)


Estado 32

   19 statement: print_statement •

    $padrão  reduzir usando a regra 19 (statement)


Estado 33

   20 statement: if_statement •

    $padrão  reduzir usando a regra 20 (statement)


Estado 34

   21 statement: loop_statement •

    $padrão  reduzir usando a regra 21 (statement)


Estado 35

   22 statement: open_statement •

    $padrão  reduzir usando a regra 22 (statement)


Estado 36

   24 statement: close_statement •

    $padrão  reduzir usando a regra 24 (statement)


Estado 37

   23 statement: jaw_statement •

    $padrão  reduzir usando a regra 23 (statement)


Estado 38

   26 statement: move_statement •

    $padrão  reduzir usando a regra 26 (statement)


Estado 39

   27 statement: moved_statement •

    $padrão  reduzir usando a regra 27 (statement)


Estado 40

   25 statement: delay_statement •

    $padrão  reduzir usando a regra 25 (statement)


Estado 41

   28 expression_statement: expression • TK_SEMICOLON

    TK_SEMICOLON  deslocar, e ir ao estado 68


Estado 42

   54 expression: assignment •

    $padrão  reduzir usando a regra 54 (expression)


Estado 43

   57 assignment: logic •
   58 logic: logic • TK_OR equality
   59      | logic • TK_AND equality

    TK_AND  deslocar, e ir ao estado 69
    TK_OR   deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 57 (assignment)


Estado 44

   60 logic: equality •
   61 equality: equality • TK_EQUAL_EQUAL comparison
   62         | equality • TK_BANG_EQUAL comparison

    TK_BANG_EQUAL   deslocar, e ir ao estado 71
    TK_EQUAL_EQUAL  deslocar, e ir ao estado 72

    $padrão  reduzir usando a regra 60 (logic)


Estado 45

   63 equality: comparison •
   64 comparison: comparison • comparison_operator term

    TK_LESSER_EQUAL   deslocar, e ir ao estado 73
    TK_GREATER_EQUAL  deslocar, e ir ao estado 74
    TK_LESSER         deslocar, e ir ao estado 75
    TK_GREATER        deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 63 (equality)

    comparison_operator  ir ao estado 77


Estado 46

   65 comparison: term •
   66 term: term • TK_PLUS factor
   67     | term • TK_MINUS factor

    TK_PLUS   deslocar, e ir ao estado 78
    TK_MINUS  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 65 (comparison)


Estado 47

   68 term: factor •
   69 factor: factor • TK_STAR unary
   70       | factor • TK_SLASH unary

    TK_STAR   deslocar, e ir ao estado 80
    TK_SLASH  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 68 (term)


Estado 48

   71 factor: unary •

    $padrão  reduzir usando a regra 71 (factor)


Estado 49

   73 unary: primary •

    $padrão  reduzir usando a regra 73 (unary)


Estado 50

   44 open_statement: TK_OPEN TK_LPAREN • optional_argument TK_RPAREN TK_SEMICOLON

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 46 (optional_argument)

    optional_argument  ir ao estado 82
    term               ir ao estado 83
    factor             ir ao estado 47
    unary              ir ao estado 48
    primary            ir ao estado 49


Estado 51

   48 jaw_statement: TK_JAW TK_LPAREN • two_numbers TK_RPAREN TK_SEMICOLON

    TK_NUMBER      deslocar, e ir ao estado 84
    TK_IDENTIFIER  deslocar, e ir ao estado 85

    two_numbers       ir ao estado 86
    numeric_variable  ir ao estado 87


Estado 52

   45 close_statement: TK_CLOSE TK_LPAREN • optional_argument TK_RPAREN TK_SEMICOLON

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 46 (optional_argument)

    optional_argument  ir ao estado 88
    term               ir ao estado 83
    factor             ir ao estado 47
    unary              ir ao estado 48
    primary            ir ao estado 49


Estado 53

   53 delay_statement: TK_DELAY TK_LPAREN • term TK_RPAREN TK_SEMICOLON

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    term     ir ao estado 89
    factor   ir ao estado 47
    unary    ir ao estado 48
    primary  ir ao estado 49


Estado 54

   49 move_statement: TK_MOVE TK_LPAREN • two_numbers TK_RPAREN TK_SEMICOLON

    TK_NUMBER      deslocar, e ir ao estado 84
    TK_IDENTIFIER  deslocar, e ir ao estado 85

    two_numbers       ir ao estado 90
    numeric_variable  ir ao estado 87


Estado 55

   50 moved_statement: TK_AWAIT TK_MOVE • TK_LPAREN two_numbers TK_RPAREN TK_SEMICOLON

    TK_LPAREN  deslocar, e ir ao estado 91


Estado 56

   56 assignment: TK_IDENTIFIER $@5 • TK_EQUAL assignment

    TK_EQUAL  deslocar, e ir ao estado 92


Estado 57

   30 print_statement: TK_PRINT TK_LPAREN • TK_STRING_LITERAL $@3 TK_RPAREN TK_SEMICOLON

    TK_STRING_LITERAL  deslocar, e ir ao estado 93


Estado 58

   31 if_statement: TK_IF TK_LPAREN • if_condition TK_RPAREN TK_LBRACE declarations TK_RBRACE else_statement

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    if_condition  ir ao estado 94
    term          ir ao estado 95
    factor        ir ao estado 47
    unary         ir ao estado 48
    primary       ir ao estado 49


Estado 59

   43 loop_statement: TK_FOR TK_LPAREN • TK_IDENTIFIER $@4 TK_BETWEEN numeric_variable TK_COMMA numeric_variable TK_RPAREN TK_LBRACE declarations TK_RBRACE

    TK_IDENTIFIER  deslocar, e ir ao estado 96


Estado 60

   78 primary: TK_IDENTIFIER •

    $padrão  reduzir usando a regra 78 (primary)


Estado 61

   72 unary: TK_MINUS unary •

    $padrão  reduzir usando a regra 72 (unary)


Estado 62

   58 logic: logic • TK_OR equality
   59      | logic • TK_AND equality
   79 primary: TK_LPAREN logic • TK_RPAREN

    TK_AND     deslocar, e ir ao estado 69
    TK_OR      deslocar, e ir ao estado 70
    TK_RPAREN  deslocar, e ir ao estado 97


Estado 63

   12 data_type: TK_STRING •

    $padrão  reduzir usando a regra 12 (data_type)


Estado 64

   13 data_type: TK_INT •

    $padrão  reduzir usando a regra 13 (data_type)


Estado 65

   14 data_type: TK_POSITION •

    $padrão  reduzir usando a regra 14 (data_type)


Estado 66

   15 data_type: TK_PARAMETER •

    $padrão  reduzir usando a regra 15 (data_type)


Estado 67

    9 var_declaration: access_modifier data_type • TK_IDENTIFIER $@2 var_init

    TK_IDENTIFIER  deslocar, e ir ao estado 98


Estado 68

   28 expression_statement: expression TK_SEMICOLON •

    $padrão  reduzir usando a regra 28 (expression_statement)


Estado 69

   59 logic: logic TK_AND • equality

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    equality    ir ao estado 99
    comparison  ir ao estado 45
    term        ir ao estado 46
    factor      ir ao estado 47
    unary       ir ao estado 48
    primary     ir ao estado 49


Estado 70

   58 logic: logic TK_OR • equality

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    equality    ir ao estado 100
    comparison  ir ao estado 45
    term        ir ao estado 46
    factor      ir ao estado 47
    unary       ir ao estado 48
    primary     ir ao estado 49


Estado 71

   62 equality: equality TK_BANG_EQUAL • comparison

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    comparison  ir ao estado 101
    term        ir ao estado 46
    factor      ir ao estado 47
    unary       ir ao estado 48
    primary     ir ao estado 49


Estado 72

   61 equality: equality TK_EQUAL_EQUAL • comparison

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    comparison  ir ao estado 102
    term        ir ao estado 46
    factor      ir ao estado 47
    unary       ir ao estado 48
    primary     ir ao estado 49


Estado 73

   85 comparison_operator: TK_LESSER_EQUAL •

    $padrão  reduzir usando a regra 85 (comparison_operator)


Estado 74

   84 comparison_operator: TK_GREATER_EQUAL •

    $padrão  reduzir usando a regra 84 (comparison_operator)


Estado 75

   83 comparison_operator: TK_LESSER •

    $padrão  reduzir usando a regra 83 (comparison_operator)


Estado 76

   82 comparison_operator: TK_GREATER •

    $padrão  reduzir usando a regra 82 (comparison_operator)


Estado 77

   64 comparison: comparison comparison_operator • term

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    term     ir ao estado 103
    factor   ir ao estado 47
    unary    ir ao estado 48
    primary  ir ao estado 49


Estado 78

   66 term: term TK_PLUS • factor

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    factor   ir ao estado 104
    unary    ir ao estado 48
    primary  ir ao estado 49


Estado 79

   67 term: term TK_MINUS • factor

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    factor   ir ao estado 105
    unary    ir ao estado 48
    primary  ir ao estado 49


Estado 80

   69 factor: factor TK_STAR • unary

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    unary    ir ao estado 106
    primary  ir ao estado 49


Estado 81

   70 factor: factor TK_SLASH • unary

    TK_STRING_LITERAL  deslocar, e ir ao estado 17
    TK_NUMBER          deslocar, e ir ao estado 18
    TK_IDENTIFIER      deslocar, e ir ao estado 60
    TK_TRUE            deslocar, e ir ao estado 20
    TK_FALSE           deslocar, e ir ao estado 21
    TK_MINUS           deslocar, e ir ao estado 25
    TK_LPAREN          deslocar, e ir ao estado 26

    unary    ir ao estado 107
    primary  ir ao estado 49


Estado 82

   44 open_statement: TK_OPEN TK_LPAREN optional_argument • TK_RPAREN TK_SEMICOLON

    TK_RPAREN  deslocar, e ir ao estado 108


Estado 83

   47 optional_argument: term •
   66 term: term • TK_PLUS factor
   67     | term • TK_MINUS factor

    TK_PLUS   deslocar, e ir ao estado 78
    TK_MINUS  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 47 (optional_argument)


Estado 84

   80 numeric_variable: TK_NUMBER •

    $padrão  reduzir usando a regra 80 (numeric_variable)


Estado 85

   81 numeric_variable: TK_IDENTIFIER •

    $padrão  reduzir usando a regra 81 (numeric_variable)


Estado 86

   48 jaw_statement: TK_JAW TK_LPAREN two_numbers • TK_RPAREN TK_SEMICOLON

    TK_RPAREN  deslocar, e ir ao estado 109


Estado 87

   51 two_numbers: numeric_variable •
   52            | numeric_variable • TK_COMMA numeric_variable

    TK_COMMA  deslocar, e ir ao estado 110

    $padrão  reduzir usando a regra 51 (two_numbers)


Estado 88

   45 close_statement: TK_CLOSE TK_LPAREN optional_argument • TK_RPAREN TK_SEMICOLON

    TK_RPAREN  deslocar, e ir ao estado 111


Estado 89

   53 delay_statement: TK_DELAY TK_LPAREN term • TK_RPAREN TK_SEMICOLON
   66 term: term • TK_PLUS factor
   67     | term • TK_MINUS factor

    TK_PLUS    deslocar, e ir ao estado 78
    TK_MINUS   deslocar, e ir ao estado 79
    TK_RPAREN  deslocar, e ir ao estado 112


Estado 90

   49 move_statement: TK_MOVE TK_LPAREN two_numbers • TK_RPAREN TK_SEMICOLON

    TK_RPAREN  deslocar, e ir ao estado 113


Estado 91
